force-app/main/default/objects/TIME_SHEET_DT__x/TIME_SHEET_DT__x.object-meta.xml
<CustomObject>
    <description>TIME_SHEET_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>TIME_SHEET_DT</externalName>
    <label>TIME_SHEET_DT</label>
    <pluralLabel>TIME_SHEET_DT</pluralLabel>
</CustomObject>