force-app/main/default/objects/TIME_SHEET_DT__x/fields/CUST_AID__c.field-meta.xml
<CustomField>
    <fullName>CUST_AID__c</fullName>
    <description>CUST_AID</description>
    <externalDeveloperName>CUST_AID</externalDeveloperName>
    <label>CUST_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>