force-app/main/default/objects/TIME_SHEET_DT__x/fields/INV_HR__c.field-meta.xml
<CustomField>
    <fullName>INV_HR__c</fullName>
    <description>INV_HR</description>
    <externalDeveloperName>INV_HR</externalDeveloperName>
    <label>INV_HR</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>