force-app/main/default/objects/TIME_SHEET_DT__x/fields/INV_MIN__c.field-meta.xml
<CustomField>
    <fullName>INV_MIN__c</fullName>
    <description>INV_MIN</description>
    <externalDeveloperName>INV_MIN</externalDeveloperName>
    <label>INV_MIN</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>