force-app/main/default/objects/TIME_SHEET_DT__x/fields/INVOICE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_FLAG__c</fullName>
    <description>INVOICE_FLAG</description>
    <externalDeveloperName>INVOICE_FLAG</externalDeveloperName>
    <label>INVOICE_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>