force-app/main/default/objects/TIME_SHEET_DT__x/fields/INVOICE_NO__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_NO__c</fullName>
    <description>INVOICE_NO</description>
    <externalDeveloperName>INVOICE_NO</externalDeveloperName>
    <label>INVOICE_NO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>