force-app/main/default/objects/TIME_SHEET_DT__x/fields/LUNCH_FLG__c.field-meta.xml
<CustomField>
    <fullName>LUNCH_FLG__c</fullName>
    <description>LUNCH_FLG</description>
    <externalDeveloperName>LUNCH_FLG</externalDeveloperName>
    <label>LUNCH_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>