force-app/main/default/objects/TIME_SHEET_DT__x/fields/LUNCH_HRS__c.field-meta.xml
<CustomField>
    <fullName>LUNCH_HRS__c</fullName>
    <description>LUNCH_HRS</description>
    <externalDeveloperName>LUNCH_HRS</externalDeveloperName>
    <label>LUNCH_HRS</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>