force-app/main/default/objects/TIME_SHEET_DT__x/fields/NARRATION__c.field-meta.xml
<CustomField>
    <fullName>NARRATION__c</fullName>
    <description>NARRATION</description>
    <externalDeveloperName>NARRATION</externalDeveloperName>
    <label>NARRATION</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>