force-app/main/default/objects/TIME_SHEET_DT__x/fields/PRACT_AID__c.field-meta.xml
<CustomField>
    <fullName>PRACT_AID__c</fullName>
    <description>PRACT_AID</description>
    <externalDeveloperName>PRACT_AID</externalDeveloperName>
    <label>PRACT_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>