force-app/main/default/objects/TIME_SHEET_DT__x/fields/PROJ_AID__c.field-meta.xml
<CustomField>
    <fullName>PROJ_AID__c</fullName>
    <description>PROJ_AID</description>
    <externalDeveloperName>PROJ_AID</externalDeveloperName>
    <label>PROJ_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>