force-app/main/default/objects/TIME_SHEET_DT__x/fields/REMARKS__c.field-meta.xml
<CustomField>
    <fullName>REMARKS__c</fullName>
    <description>REMARKS</description>
    <externalDeveloperName>REMARKS</externalDeveloperName>
    <label>REMARKS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>