force-app/main/default/objects/TIME_SHEET_DT__x/fields/START_TIME__c.field-meta.xml
<CustomField>
    <fullName>START_TIME__c</fullName>
    <description>START_TIME</description>
    <externalDeveloperName>START_TIME</externalDeveloperName>
    <label>START_TIME</label>
    <length>5</length>
    <type>Text</type>
</CustomField>