force-app/main/default/objects/TIME_SHEET_DT__x/fields/START_TIME_AMPM__c.field-meta.xml
<CustomField>
    <fullName>START_TIME_AMPM__c</fullName>
    <description>START_TIME_AMPM</description>
    <externalDeveloperName>START_TIME_AMPM</externalDeveloperName>
    <label>START_TIME_AMPM</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>