force-app/main/default/objects/TIME_SHEET_DT__x/fields/TOTAL_MIN__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MIN__c</fullName>
    <description>TOTAL_MIN</description>
    <externalDeveloperName>TOTAL_MIN</externalDeveloperName>
    <label>TOTAL_MIN</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>